--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<h2>Posts</h2>
 	<ol>
-		<li><a href="/posts/setjs.html">Set.js - a toy implementation of unique sets in JavaScript</a></li>
+		<li><a href="/blog/posts/setjs.html">Set.js - a toy implementation of unique sets in JavaScript</a></li>
 	</ol>
 </body>
 </html>
