--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<h2>Posts</h2>
 	<ol>
 		<li><a href="/blog/posts/setjs.html">Set.js - a toy implementation of unique sets in JavaScript</a></li>
+		<li><a href="/blog/posts/new_function_string_interp.html">Brief explanation of String templating in JavaScript</a></li>
 	</ol>
 </body>
 </html>
