Adds Fixing Google Tabs post

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li><a href="/blog/posts/setjs.html">Set.js - a toy implementation of unique sets in JavaScript</a></li>
     <li><a href="/blog/posts/new_function_string_interp.html">Brief explanation of String templating in JavaScript</a></li>
 		<li><a href="/blog/posts/promises_lib_js.html">promise.js - a toy implementation of promises in JavaScript</a></li>
+		<li><a href="/blog/posts/fix_google_tab_order.html">Fix Google's awful tabbing order</a></li>
 	</ol>
 </body>
 </html>
