--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="/blog/posts/new_function_string_interp.html">Brief explanation of String templating in JavaScript</a></li>
 		<li><a href="/blog/posts/promises_lib_js.html">promise.js - a toy implementation of promises in JavaScript</a></li>
 		<li><a href="/blog/posts/fix_google_tab_order.html">Fix Google's awful tabbing order</a></li>
+    <li><a href="/blog/posts/whats_the_best_way_to_declare_functions.html">What's the best way to declare functions?</a></li>
 	</ol>
 </body>
 </html>
